# shared-plan-handoff

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.agents/plugins/: marketplace.json
.codex/skills/notion-pm-bridge/: SKILL.md
.codex/skills/pm-plan-translator/: SKILL.md
.codex/skills/pm-rescue/: SKILL.md
docs/: dogfood_retrospective.md  local_codex_plugin.md  qa_report.md  release_readiness.md  shipping_plan.md  shipping_tasks.md
examples/: README.md  plan-spec.json
plans/: README.md
plans/data-workbench/: approved-tasks.md  current-state.md  decomposition-review.md  detailed-scan.md  handoff.json  task-graph.json
plans/data-workbench/revisions/: r001-decomposition-review.md  r001-handoff.json  r001-task-graph.json  r002-approved-plan.md  r002-decomposition-review.md  r002-handoff.json  r002-task-graph.json  r003-decomposition-review.md  r003-handoff.json  r003-task-graph.json  r004-decomposition-review.md  r004-handoff.json  r004-task-graph.json  r005-approved-plan.md  r005-decomposition-review.md  r005-handoff.json  r005-task-graph.json  r006-approved-plan.md
plans/notion-pm-bridge/revisions/: r001-decomposition-review.md  r001-handoff.json  r001-task-graph.json  r004-approved-tasks.md  r005-approved-plan.md  r005-decomposition-review.md  r005-handoff.json  r005-task-graph.json
plans/os-pre/: current-state.md  detailed-scan.md  recovery-plan.md
plans/projectmanagervisualization/: decomposition-review.md  handoff.json
plans/projectmanagervisualization/revisions/: r001-task-graph.json
plans/shared-plan-handoff/: handoff.json  task-graph.json
plans/shared-plan-handoff/revisions/: r001-approved-tasks.md  r001-decomposition-review.md
plugins/project-manager-visualization/: README.md
plugins/project-manager-visualization/.codex-plugin/: plugin.json
plugins/project-manager-visualization/agents/: openai.yaml
plugins/shared-plan-handoff/: README.md
plugins/shared-plan-handoff/.codex-plugin/: plugin.json
plugins/shared-plan-handoff/agents/: openai.yaml
scripts/: bootstrap_venv.sh
src/notion_pm_bridge/: __init__.py  bridge.py  cli.py  config.py  coordinator.py  exceptions.py  models.py  notion_client.py  repo_artifacts.py  spec_io.py  webhook_server.py
tests/: test_bridge.py
(+3 files in other folders)
