[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "notion-pm-bridge"
version = "0.1.0"
description = "Repo-first handoff bridge that turns approved plans into reviewed Notion execution workspaces for humans and agents."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "OpenAI Codex" }
]
keywords = ["codex", "notion", "handoff", "planning", "workflow-automation", "ai-agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Office/Business :: Scheduling",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/kyungmin-kang/shared-plan-handoff"
Repository = "https://github.com/kyungmin-kang/shared-plan-handoff"
Issues = "https://github.com/kyungmin-kang/shared-plan-handoff/issues"

[project.scripts]
pm = "notion_pm_bridge.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
